--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,26 @@
-h1 {
-    color: rgb(122, 35, 35)
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    font-family: "Poppins", sans-serif;
+}
+
+:root {
+    --bg-color: #080808;
+    --secondary-bg-color: #121212;
+    --text-color: #e4e4e4;
+    --main-color: #06e2f6fe;
+}
+
+html {
+    overflow-x: hidden;
+}
+
+body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
 }
